# SigmaProtocol

./: .gitignore  README.md
sigma_protocol/: Cargo.toml  config_p.json  config_v.json
sigma_protocol/html/: index.html
sigma_protocol/src/: config.rs  key_gen.rs  main.rs  math.rs
