[package]
name = "sigma_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tower-http = "0.6.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
