[package]
name = "sigma_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tower-http = {version = "0.6.6", features = ["fs"]}
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-core = "0.3"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"

num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8"
